SecurityGroup.yaml
AWSTemplateFormatVersion: '2010-09-09'
Parameters:
  Environment:
    Type: String
  ProjectName:
    Type: String
  VPC:
    Description: VPC ID from VPC stack output
    Type: AWS::EC2::VPC::Id

Resources:
  LoadbalancerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub ${ProjectName}-${Environment}-alb-Security-Group
      GroupDescription: !Sub ${ProjectName}-${Environment}-alb security group
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 9443
          ToPort: 9443
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-alb-sg

  ECSSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      VpcId: !Ref VPC
      GroupName: !Sub ${ProjectName}-${Environment}-ECS-Security-Group
      GroupDescription: Enable HTTP access for Django and FastAPI
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref LoadbalancerSecurityGroup
          Description: Django on port 80
        - IpProtocol: tcp
          FromPort: 81
          ToPort: 81
          SourceSecurityGroupId: !Ref LoadbalancerSecurityGroup
          Description: FastAPI on port 81
      Tags:
        - Key: Name
          Value: !Sub ${ProjectName}-${Environment}-ecs-sg

Outputs:
  ECSSecurityGroup:
    Value: !Ref ECSSecurityGroup
  LoadbalancerSecurityGroup:
    Value: !Ref LoadbalancerSecurityGroup
